<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="9dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Stall 6 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/stall6"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/f" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_layout5"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="#6A5551"
                    app:flow_verticalBias="1"
                    app:layout_constraintBottom_toBottomOf="@+id/stall6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                    <Button
                        android:id="@+id/btnstall6"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="180dp"
                        android:layout_height="48dp"
                        android:fontFamily="casual"
                        android:text="@string/k_bab"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold|italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.125" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/located_in_1st_floor"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnstall6"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Stall 7 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/stall7"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/g" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_layout6"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="#6A5551"
                    app:flow_verticalBias="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                    <Button
                        android:id="@+id/btnstall7"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:fontFamily="casual"
                        android:text="@string/comeback_food_campus"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold|italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.125" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/located_in_1st_floor"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnstall7"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Stall 8 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/stall8"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/h" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_layout7"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="#6A5551"
                    app:flow_verticalBias="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                    <Button
                        android:id="@+id/btnstall8"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="180dp"
                        android:layout_height="48dp"
                        android:fontFamily="casual"
                        android:text="@string/kurnia_juice"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold|italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.125" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/located_in_1st_floor"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnstall8"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Stall 9 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/stall9"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/i" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_layout8"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="#6A5551"
                    app:flow_verticalBias="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                    <Button
                        android:id="@+id/btnstall9"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="180dp"
                        android:layout_height="48dp"
                        android:fontFamily="casual"
                        android:text="@string/pu_normal"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold|italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.125" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/located_in_1st_floor"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnstall9"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Stall 10 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/stall10"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/j" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_layout9"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="#6A5551"
                    app:flow_verticalBias="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                    <Button
                        android:id="@+id/btnstall10"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="180dp"
                        android:layout_height="48dp"
                        android:fontFamily="casual"
                        android:text="@string/family_kantin"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold|italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.125" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/located_in_1st_floor"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnstall10"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Button -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/previousPageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/previous_page" />

                    <Button
                        android:id="@+id/nextPageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next_page" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>